<resources>
    <string name="app_name">Miluim270818</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="login_hl">Sign In</string>
    <string name="sign_up_hl">Login</string>
    <string name="kishur_hl">Kishur</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!--strings related to navBar-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login2">Sign in</string>

    <!--string related to MyTank-->
    <string name="tank_HL">My Tank</string>
    <string name="tank_num_title">Id:</string>
    <string name="tank_num">836000</string>
    <string name="tank_job_title">Tank Job:</string>
    <string name="tank_job">Commander</string>
    <string name="tank_place_title">Current Place:</string>
    <string name="tank_place">10א</string>
    <string name="tank_equipment_title">Missing:</string>
    <string name="tank_equipment">אם חסר אז נפתחת רשימה</string>
    <string name="tank_faults_title">Faults:</string>
    <string name="tank_faults">אם יש נפתחת רשימה</string>
    <string name="tank_updates_title">Updates:</string>
    <string name="tank_updates">אם יש נפתחת רשימה - דף שנותן את האפשרות ליצור עדכון</string>

    <!--related to myFriend-->
    <string name="friend_Hl">My Friends</string>

    <string name="friend_duty_commander_title">Commander</string>
    <string name="friend_name_commander">sasi mor</string>
    <string name="friend_num_commander">0541234567</string>

    <string name="friend_duty_hunter_title">Hunter</string>
    <string name="friend_name_hunter">jon mor</string>
    <string name="friend_num_hunter">0541234567</string>

    <string name="friend_duty_provider_title">Provider</string>
    <string name="friend_name_provider">sasi mor</string>
    <string name="friend_num_provider">0541234567</string>

    <string name="friend_duty_driver_title">Driver</string>
    <string name="friend_name_driver">sasi mor</string>
    <string name="friend_num_driver">0541234567</string>


    <string name="btn_LoginBackendless">Log in</string>
    <string name="btn_LogoutBackendless">Logout from Backendless</string>
    <string name="btn_LoginFacebook">Login in Facebook</string>
    <string name="btn_LoginGooglePlus">Login in GooglePlus</string>
    <string name="btn_LoginTwitter">Login in Twitter</string>

    <string name="textView_BackendlessUserInfo">Backendless User info.</string>
    <string name="editText_BackendlessUserInfo">You should login as Backendless user first.</string>

    <string name="register_text">Register</string>
    <string name="restore_link">Restore</string>
    <string name="login_prompt">Login:</string>
    <string name="password_prompt">Password:</string>
    <string name="password_recovery_page_name">Password Recovery</string>
    <string name="remember_login_text">Remember me</string>

    <string name="ownerId_field_prompt">OwnerId:</string>
    <string name="email_field_prompt">Email:</string>
    <string name="objectId_field_prompt">ObjectId:</string>
    <string name="created_field_prompt">Created:</string>
    <string name="password_field_prompt">Password:</string>
    <string name="updated_field_prompt">Updated:</string>
    <string name="name_field_prompt">Name:</string>
    <string name="file_field_prompt">File:</string>
    <string name="registration_success">Registered successfully!</string>
    <string name="registration_error">Registration error!</string>

    <string name="restore_password_page_name">Password Restoration</string>
    <string name="password_recovered_message">We sent an email to your email address with a link to a password change page. Please check your email and follow the link for further instructions.</string>
    <string name="registration_page_name">Registration</string>
    <string name="registration_success_message">Thank you for registering with the %1$s.</string>


    <!-- __________ change this credentials and configure your applications __________ -->
    <!-- You also need to set android debug key in Facebook and Google apps -->

    <!-- for Facebook -->
    <!-- https://developers.facebook.com/docs/facebook-login/android -->
    <string name="facebook_app_id"></string>
    <string name="fb_login_protocol_scheme">fb...</string>

    <!-- for Google -->
    <!-- https://developers.google.com/identity/sign-in/android/start-integrating -->
    <string name="gp_WebApp_ClientId"></string>
    <string name="gp_WebApp_ClientSecret"></string>


    <string name="my_tank_nav">My Tank</string>
    <string name="my_friends_nav">My Friends</string>
    <string name="kishur_nav">Kishur</string>
    <string name="communicate_nav">Communicate</string>
    <string name="nav_faq">FAQ</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>
    <string name="nav_miluim_nik">MiluiM NiK</string>
    <string name="nav_username">User name</string>


</resources>

