<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_tank"
                android:icon="@drawable/tank"
                android:title="@string/my_tank_nav"
                />
            <item
                android:id="@+id/nav_friend"
                android:icon="@drawable/friend"
                android:title="@string/my_friends_nav" />
            <item
                android:id="@+id/nav_kishur"
                android:icon="@drawable/soldier"
                android:title="@string/kishur_nav" />
            <item
                android:id="@+id/nav_proMaterial"
                android:icon="@drawable/pro_materia"
                android:title="@string/nav_faq" />
        </group>

        <item android:title="@string/communicate_nav">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/nav_share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/nav_send" />
            </menu>
        </item>

    </menu>

