<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="#8282ca"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp"
    app:contentPadding="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:padding="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/imgFriendPerson"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:src="@drawable/soldier"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtFriendDuty"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="1"
                        android:text="@string/friend_duty_commander_title"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtFriendName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="1"
                        android:text="@string/friend_name_commander"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtFriendTel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="1"
                        android:text="@string/friend_num_commander"
                        android:textSize="20sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".45"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_item_whatsapp"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:padding="1dp"
                    android:src="@drawable/whatsapp" />

                <ImageView
                    android:id="@+id/img_item_call"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:padding="1dp"
                    android:src="@drawable/phone" />
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>

</android.support.v7.widget.CardView>